force-app/main/default/objects/Game__c/Game__c.object-meta.xml
<CustomObject>
    <label>Game</label>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Games</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>