force-app/main/default/objects/Game__c/fields/Genres__c.field-meta.xml
<CustomField>
    <fullName>Genres__c</fullName>
    <label>Genres</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
            </value>
            <value>
                <fullName>Adventure</fullName>
            </value>
            <value>
                <fullName>Puzzle</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Horror</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>Strategy</fullName>
            </value>
            <value>
                <fullName>MOBA</fullName>
            </value>
            <value>
                <fullName>Shooter</fullName>
            </value>
            <value>
                <fullName>First Person</fullName>
            </value>
            <value>
                <fullName>Third Person</fullName>
            </value>
            <value>
                <fullName>Multiplayer</fullName>
            </value>
            <value>
                <fullName>Single-Player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>