force-app/main/default/objects/Game__c/fields/Metacritic_Link__c.field-meta.xml
<CustomField>
    <fullName>Metacritic_Link__c</fullName>
    <label>Metacritic Link</label>
    <type>Url</type>
</CustomField>