force-app/main/default/objects/Game__c/fields/Metacritic_Rating__c.field-meta.xml
<CustomField>
    <fullName>Metacritic_Rating__c</fullName>
    <label>Metacritic Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>