force-app/main/default/objects/Game__c/fields/Platform1__c.field-meta.xml
<CustomField>
    <fullName>Platform1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PC</label>
    <type>Checkbox</type>
</CustomField>