force-app/main/default/objects/Game__c/fields/Platform2__c.field-meta.xml
<CustomField>
    <fullName>Platform2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Playstation 4</label>
    <type>Checkbox</type>
</CustomField>