force-app/main/default/objects/Game__c/fields/Platform3__c.field-meta.xml
<CustomField>
    <fullName>Platform3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Playstation 5</label>
    <type>Checkbox</type>
</CustomField>